[package]
name = "rusk"
version = "0.1.2"
authors = ["rami3l <rami3l@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"
regex = "1"
rustyline = "5"
clap = {version = "~2.27.0", features = ["yaml"]}