[package]
name = "rusk"
version = "0.1.2"
authors = ["rami3l <rami3l@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
regex = "1.3"
rustyline = "6.0"
clap = {version = "2.33.0", features = ["yaml"]}